@@ -2,8 +2,9 @@ package com.example.live_backend.domain.mission.service;
 
 import com.example.live_backend.domain.mission.dto.CloverMissionListResponseDto;
 import com.example.live_backend.domain.mission.dto.CloverMissionResponseDto;
-import com.example.live_backend.domain.mission.repository.CloverMissionRepository;
+import com.example.live_backend.domain.mission.entity.MissionRecord;
 import com.example.live_backend.domain.memeber.util.UserUtil;
+import com.example.live_backend.domain.mission.repository.MissionRecordRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -11,72 +12,66 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
-public class MissionService {
+public class CloverMissionService {
 
-    private final CloverMissionRepository cloverMissionRepository;
+    private final MissionRecordRepository missionRecordRepository;
     private final UserUtil userUtil;
 
-    @Transactional
+    @Transactional(readOnly = true)
     public CloverMissionListResponseDto getCloverMissionList() {
         Long currentUserId = userUtil.getCurrentUserId();
         log.info("클로버 미션 리스트 조회 시작 - 인증된 사용자 ID: {}", currentUserId);
 
         LocalDateTime searchDate = LocalDateTime.now();
 
-        List<MissionUser> todayMissions = cloverMissionRepository.findTodayCloverMissionsByUserId(currentUserId, searchDate);
+        List<MissionRecord> todayMissions = missionRecordRepository.findCloverMissions(currentUserId, searchDate);
+
+        if (todayMissions.isEmpty()) {
+            log.info("조회된 클로버 미션 개수: 0");
+            throw new RuntimeException("조회된 클로버 미션 개수: 0");
+        }
 
         log.info("조회된 클로버 미션 개수: {}", todayMissions.size());
 
-        // MissionUser 리스트를 TodayMissionDto 리스트로 변환
-        List<CloverMissionListResponseDto.TodayMissionDto> missionDtos = todayMissions.stream()
-                .map(this::convertToTodayMissionDto)
-                .collect(Collectors.toList());
+        // MissionRecord 리스트를 TodayMissionDto 리스트로 변환
+        List<CloverMissionListResponseDto.CloverMissionList> missionLists = todayMissions.stream()
+                .map(missionRecord -> CloverMissionListResponseDto.CloverMissionList.builder()
+                        .missionRecordId(missionRecord.getId())
+                        .title(missionRecord.getMissionTitle())
+                        .build())
+                .toList();
 
         CloverMissionListResponseDto response = CloverMissionListResponseDto.builder()
                 .userId(currentUserId)
-                .searchDate(searchDate)
-                .missions(missionDtos)
+                .missions(missionLists)
                 .build();
 
-        log.info("클로버 미션 리스트 조회 완료 - 총 {}개 미션", missionDtos.size());
+        log.info("클로버 미션 리스트 조회 완료 - 총 {}개 미션", missionLists.size());
 
         return response;
     }
 
-    /**
-     * MissionUser -> TodayMissionDto 변환
-     */
-    private CloverMissionListResponseDto.TodayMissionDto convertToTodayMissionDto(MissionUser missionUser) {
-        return CloverMissionListResponseDto.TodayMissionDto.builder()
-                .missionId(missionUser.getId())
-                .title(missionUser.getTitle())
-                .build();
-    }
-
-    @Transactional
-    public CloverMissionResponseDto getCloverMission(Long missionId) {
+    @Transactional(readOnly = true)
+    public CloverMissionResponseDto getCloverMissionInfo(Long missionRecordId) {
 
         Long currentUserId = userUtil.getCurrentUserId();
         log.info("클로버 미션 조회 시작 - 인증된 사용자 ID: {}", currentUserId);
 
-        MissionUser cloverMissionById = cloverMissionRepository.findCloverMissionById(missionId);
+        MissionRecord cloverMissionById = missionRecordRepository.findById(missionRecordId)
+                .orElseThrow(() -> new RuntimeException("해당 ID의 미션을 찾을 수 없습니다: " + missionRecordId));
 
         CloverMissionResponseDto response = CloverMissionResponseDto.builder()
-                .missionId(cloverMissionById.getId())
-                .title(cloverMissionById.getTitle())
-                .description(cloverMissionById.getDescription())
-                .category(cloverMissionById.getMissionClover().getCategory())
-                .difficulty(cloverMissionById.getMissionClover().getDifficulty())
+                .missionRecordId(cloverMissionById.getId())
+                .title(cloverMissionById.getMissionTitle())
+                .description(cloverMissionById.getMissionDescription())
+                .category(cloverMissionById.getMissionCategory())
+                .difficulty(cloverMissionById.getMissionDifficulty())
                 .build();
 
-        log.info("클로버 미션 조회 완료 - 클로버 미션 ID: {}", missionId);
-
         return response;
-
     }
 }
